tests/sources/invalid/borrow/borrow_escape_projection_errors.fire
// Borrow-escape through direct projections

import @firescript/std.io.println;

class Box {
    name: string;
}

fn badFieldReturn(b: &Box) -> string {
    return b.name; // Error: direct borrowed projection escapes  //~ ERROR FS-SEM-0001 @14
}

fn badArrayReturn(arr: &string[]) -> string[] {
    return arr; // Error: returning borrowed array escapes  //~ ERROR FS-SEM-0001 @12
}

values: string[] = ["a", "b"];
bx: Box = Box("fire");
println(badFieldReturn(bx));
println(badArrayReturn(values).length());
